--- a/stranice/OMeni/style.css
+++ b/stranice/OMeni/style.css
@@ -48,7 +48,29 @@ body{
     margin-top: 2rem;
     padding: 2px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
+
     gap: 2px;
 
+}
+
+.slika{
+    background-image: linear-gradient(45deg, rgb(106, 80, 255), rgb(87, 174, 255));
+    border-radius: 2rem;
+    height: 30rem;
+    width: 20rem;
+    margin: 2rem;
+}
+
+.omeni{
+    width: 20rem;
+    height: 30rem;
+}
+
+.slika img{
+    width: 100%;
+    height: 100%;
 }
